# TEMPORA

./: README.md
LiveRGTA/: .gitignore  AUTHORS  CMakeLists.txt  README.md  install.sh
LiveRGTA/examples/: benchmark_fischer.sh  dining-philosophers-shared-var.sh
LiveRGTA/gta-examples/: csmacd-gta.sh  dining-philosophers-gta.sh  fischer-with-diagonals.sh  fischer_gta.sh  gta_sim_improv_example.sh  toy_example.txt
LiveRGTA/include/tchecker/: basictypes.hh
LiveRGTA/src/: CMakeLists.txt  basictypes.cc
LiveRGTA/src/algorithms/: CMakeLists.txt
LiveRGTA/src/clockbounds/: clockbounds.cc  solver.cc
LiveRGTA/src/dbm/: CMakeLists.txt  db.cc  gtadbm.cc
LiveRGTA/src/graph/: node.cc
LiveRGTA/src/gta/: CMakeLists.txt  gta.cc  state.cc  static_analysis.cc  system.cc  transition.cc
LiveRGTA/src/gta_program/: CMakeLists.txt  action.cc  gta_program.cc  guard.cc  static_analysis.cc  typechecking.cc  typed_action.cc  typed_gta_program.cc  typed_guard.cc
LiveRGTA/src/gtazg/: CMakeLists.txt  gta_zone.cc  gtazg.cc  semantics.cc  state.cc  transition.cc
LiveRGTA/src/parsing/: CMakeLists.txt
LiveRGTA/src/parsing/gta_program_parser/: CMakeLists.txt  gta_program.ll  gta_program.yy
LiveRGTA/src/tck-liveness/: tck-liveness.cc  zg-gtascc.cc  zg-gtascc.hh
LiveRGTA/src/tck-reach/: gta-covreach.cc  gta-covreach.hh  tck-reach.cc
LiveRGTA/src/tck-syntax/: syntax-check.cc  tck-syntax.cc  (+1 more)
mitl2gta/: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  README.md
mitl2gta/apps/: CMakeLists.txt  io.cpp  io.hpp  mitl2gta.cpp  parsing.cpp  parsing.hpp
mitl2gta/examples/: model-checking.txt  toy-example.txt  unsat-example.txt
mitl2gta/src/: CMakeLists.txt
mitl2gta/src/boolean_expression/: CMakeLists.txt  static_analysis.cpp  translation.cpp
mitl2gta/src/clock/: CMakeLists.txt  clock_registry.cpp
mitl2gta/src/compile/: CMakeLists.txt  atomic_constant.cpp  atomic_proposition.cpp  booleans.cpp  compiled_node.cpp  compiled_node_registry.cpp  compiler.cpp  compiler_initsat.cpp  finally.cpp  initsat.cpp  master.cpp  next.cpp  since.cpp  truth_value_predictor.cpp  until.cpp  yesterday.cpp
mitl2gta/src/gta_system/: CMakeLists.txt  edge.cpp  location.cpp  process.cpp  static_analysis.cpp  synchronization.cpp  system.cpp  variable.cpp
mitl2gta/src/interval/: CMakeLists.txt  bound.cpp  interval.cpp
mitl2gta/src/memory/: CMakeLists.txt  memory_handler.cpp  memory_mapping.cpp
mitl2gta/src/mitl_formula/: CMakeLists.txt  factory.cpp  parsed_formula.cpp  static_analysis.cpp  tree_transformations.cpp
mitl2gta/src/parsing/: CMakeLists.txt
mitl2gta/src/parsing/mitl_formula/: CMakeLists.txt  formula_parser.y  formula_scanner.l
mitl2gta/src/sharer_automaton/: CMakeLists.txt  sharer_registry.cpp  translation.cpp
mitl2gta/src/transducer/: CMakeLists.txt  edge.cpp  edge_discrete_attributes.cpp  gta_program.cpp  state.cpp  static_analysis.cpp  system.cpp  transducer.cpp  translation.cpp
mitl2gta/src/utils/: CMakeLists.txt  extended_int.cpp  id_allocator.cpp  string_construction.cpp
(+91 files in other folders)
